--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Handsome</title>
+    <meta name="description" content="Just like my mom tells me" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
